# study-tools

./: .gitignore  jsconfig.json  package-lock.json  package.json  pyproject.toml
coding/: __init__.py  __main__.py  db.py  routes.py
coding/static/: codebook-store.js  player.js  vidstack-cdn.d.ts
coding/templates/: _section_row.html  base.html  codebook.html  index.html  session.html  sheet.html
transcript/: __main__.py
