[project]
name = "study-tools"
version = "0.1.0"
description = "Qualitative coding tools for study session videos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.39.2",
    "scipy>=1.17.1",
    "sqlite-utils>=3.39",
    "statsmodels>=0.14.6",
]

[project.scripts]
study-web = "web.__main__:main"
study-transcript = "transcript.__main__:main"
